update styles and header icon

--- a/toolbox.html
+++ b/toolbox.html
@@ -19,6 +19,7 @@
   <body>
     <div class="modal-header">
       <h1 class="logo">
+        <i class="fa fa-briefcase" style="vertical-align: middle;"></i>
         Coder's Toolbox
       </h1>
     </div>
