--- a/toolbox.html
+++ b/toolbox.html
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="flex">
-          <a href="https://www.codepen.com/" target="_blank" title="CodePen">
+          <a href="https://www.codepen.io/" target="_blank" title="CodePen">
             <i class="fa fa-codepen"></i>
           </a>
         </div>
