--- a/toolbox.html
+++ b/toolbox.html
@@ -53,7 +53,7 @@
       <div class="flex-container">
         <div class="flex">
           <a
-            href="https://www.https://news.ycombinator.com/.com"
+            href="https://news.ycombinator.com/"
             target="_blank"
             title="Hacker News"
           >
