add settings icon

--- a/toolbox.html
+++ b/toolbox.html
@@ -19,8 +19,9 @@
   <body>
     <div class="modal-header">
       <h1 class="logo">
-        <i class="fa fa-briefcase" style="vertical-align: middle;"></i>
+        <i class="fa fa-briefcase" id="toolbox-icon"></i>
         Coder's Toolbox
+        <i class="fa fa-cog" id="settings-icon"></i>
       </h1>
     </div>
     <div class="modal-icons">
