--- a/toolbox.html
+++ b/toolbox.html
@@ -14,6 +14,8 @@
       type="text/css"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+    <script src="script.js"></script>
   </head>
 
   <body>
