update settings icon

--- a/toolbox.html
+++ b/toolbox.html
@@ -23,7 +23,7 @@
       <h1 class="logo">
         <i class="fa fa-briefcase" id="toolbox-icon"></i>
         Coder's Toolbox
-        <i class="fa fa-cog" id="settings-icon"></i>
+        <i class="fa fa-cog" id="settings-icon" title="Settings"></i>
       </h1>
     </div>
     <div class="modal-icons">
