--- a/toolbox.html
+++ b/toolbox.html
@@ -53,7 +53,7 @@
           </a>
         </div>
       </div>
-      <div class="flex-container">
+      <!-- <div class="flex-container">
         <div class="flex">
           <a
             href="https://news.ycombinator.com/"
@@ -78,7 +78,7 @@
             <i class="fa fa-trello"></i>
           </a>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
