add hover style to settings icon

--- a/toolbox.html
+++ b/toolbox.html
@@ -22,9 +22,7 @@
     <div id="form-container" style="display: none;">
       <form action="">
         Enter the icons in the order you want to show:
-        <textarea rows="4" cols="50" name="comment" form="usrform">
-          Enter text here...</textarea
-        >
+        <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
         <input type="submit" value="Submit" />
       </form>
     </div>
