--- a/toolbox.html
+++ b/toolbox.html
@@ -34,7 +34,7 @@
       </h1>
     </div>
     <div class="modal-icons">
-      <div class="flex-container">
+      <!-- <div class="flex-container">
         <div class="flex">
           <a href="https://www.github.com" target="_blank" title="Github">
             <i class="fa fa-github"></i>
@@ -59,7 +59,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="flex-container">
         <div class="flex">
           <a
