wrap process in a function

--- a/toolbox.html
+++ b/toolbox.html
@@ -20,7 +20,7 @@
 
   <body>
     <div id="form-container" style="display: none;">
-      <form action="">
+      <form>
         Enter the icons in the order you want to show:
         <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
         <input type="submit" value="Submit" />
