add link to font-awesome

--- a/toolbox.html
+++ b/toolbox.html
@@ -21,7 +21,11 @@
   <body>
     <div id="form-container" style="display: none;">
       <form>
-        Enter the icons in the order you want to show:
+        Enter the icons in the order you want to show.
+        <br />
+        See font-awesome icons ( "fa fa-[company]" )
+        <a href="https://fontawesome.com/icons?s=brands" target="_blank">here</a
+        >.
         <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
         <input type="submit" value="Submit" />
       </form>
