--- a/toolbox.html
+++ b/toolbox.html
@@ -41,59 +41,6 @@
         <i class="fa fa-cog" id="settings-icon" title="Settings"></i>
       </h1>
     </div>
-    <div class="modal-icons">
-      <!-- <div class="flex-container">
-        <div class="flex">
-          <a href="https://www.github.com" target="_blank" title="Github">
-            <i class="fa fa-github"></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a
-            href="https://www.stackoverflow.com/"
-            target="_blank"
-            title="Stack Overflow"
-          >
-            <i class="fa fa-stack-overflow"></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://www.codepen.io/" target="_blank" title="CodePen">
-            <i class="fa fa-codepen"></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://www.twitter.com/" target="_blank" title="Twitter">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </div>
-      </div> -->
-      <!-- <div class="flex-container">
-        <div class="flex">
-          <a
-            href="https://news.ycombinator.com/"
-            target="_blank"
-            title="Hacker News"
-          >
-            <i class="fa fa-hacker-news"></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://www.reddit.com/" target="_blank" title="Reddit">
-            <i class="fa fa-reddit"></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://jsfiddle.net/" target="_blank" title="JSFiddle">
-            <i class="fa fa-jsfiddle"></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://www.trello.com/" target="_blank" title="Trello">
-            <i class="fa fa-trello"></i>
-          </a>
-        </div>
-      </div> -->
-    </div>
+    <div class="modal-icons"></div>
   </body>
 </html>
