--- a/toolbox.html
+++ b/toolbox.html
@@ -27,9 +27,9 @@
       <form>
         Enter the icons in the order you want to show.
         <br />
-        See font-awesome icons ( "fa fa-[company]" )
+        See font-awesome icons
         <a href="https://fontawesome.com/icons?s=brands" target="_blank">here</a
-        >.
+        >. ( "fa fa-[company]" )
         <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
         <input type="submit" value="Submit" />
       </form>
