--- a/toolbox.html
+++ b/toolbox.html
@@ -25,7 +25,8 @@
   <body>
     <div id="form-container" style="display: none;">
       <form>
-        Enter the icons in the order you want to show.
+        Enter the icons in the order you want to show. 
+        <i class="fa fa-times" id="close-icon" title="Close"></i>
         <br />
         See font-awesome icons
         <a href="https://fontawesome.com/icons?s=brands" target="_blank">here</a
