add jquery ui sortable list items

--- a/toolbox.html
+++ b/toolbox.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="jquery-3.4.1.slim.min.js"></script>
+    <script src="jquery-ui.min.js"></script>
     <script src="script.js"></script>
   </head>
 
@@ -43,5 +44,15 @@
       </h1>
     </div>
     <div class="modal-icons"></div>
+    <ul id="sortable">
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 1</li>
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 2</li>
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 3</li>
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 4</li>
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 5</li>
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 6</li>
+      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 7</li>
+    </ul>
+     
   </body>
 </html>
