--- a/toolbox.html
+++ b/toolbox.html
@@ -26,7 +26,7 @@
   <body>
     <div id="form-container" style="display: none;">
       <form>
-        Enter the icons in the order you want to show. 
+        Enter the icons in the order you want to show.
         <i class="fa fa-times" id="close-icon" title="Close"></i>
         <br />
         See font-awesome icons
@@ -45,14 +45,10 @@
     </div>
     <div class="modal-icons"></div>
     <ul id="sortable">
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 1</li>
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 2</li>
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 3</li>
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 4</li>
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 5</li>
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 6</li>
-      <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 7</li>
+      <li>Item 1<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
+      <li>Item 2<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
+      <li>Item 3<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
+      <li>Item 4<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
     </ul>
-     
   </body>
 </html>
