dynamically populate list

--- a/toolbox.html
+++ b/toolbox.html
@@ -44,11 +44,6 @@
       </h1>
     </div>
     <div class="modal-icons"></div>
-    <ul id="sortable">
-      <li>Item 1<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
-      <li>Item 2<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
-      <li>Item 3<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
-      <li>Item 4<i class="fa fa-pencil-square-o" aria-hidden="true"></i></li>
-    </ul>
+    <ul id="sortable"></ul>
   </body>
 </html>
