--- a/toolbox.html
+++ b/toolbox.html
@@ -44,6 +44,21 @@
       </h1>
     </div>
     <div class="modal-icons"></div>
+    <div id="edit-form">
+      <form>
+        <div id="edit-titles">
+          <span>Title:</span>
+          <span>URL:</span>
+          <span>Icon:</span>
+        </div>
+        <div id="edit-titles">
+          <span><input type="text"></span>
+          <span><input type="text"></span>
+          <span><input type="text"></span>
+        </div>
+        <div id="edit-inputs"></div>
+      </form>
+    </div>
     <ul id="sortable"></ul>
   </body>
 </html>
