target list items by id

--- a/toolbox.html
+++ b/toolbox.html
@@ -56,7 +56,8 @@
           <span><input type="text"></span>
           <span><input type="text"></span>
         </div>
-        <div id="edit-inputs"></div>
+        <br>
+        <input id="save-button" type="submit" value="Save" />
       </form>
     </div>
     <ul id="sortable"></ul>
