capture form data

--- a/toolbox.html
+++ b/toolbox.html
@@ -46,17 +46,17 @@
     <div class="modal-icons"></div>
     <div id="edit-form">
       <form>
-        <div id="edit-titles">
+        <div id="edit-labels">
           <span>Title:</span>
           <span>URL:</span>
           <span>Icon:</span>
         </div>
-        <div id="edit-titles">
-          <span><input type="text"></span>
-          <span><input type="text"></span>
-          <span><input type="text"></span>
+        <div id="edit-inputs">
+          <span><input id="edit-title" type="text"/></span>
+          <span><input id="edit-url" type="text"/></span>
+          <span><input id="edit-icon" type="text"/></span>
         </div>
-        <br>
+        <br />
         <input id="save-button" type="submit" value="Save" />
       </form>
     </div>
