move list to form container

--- a/toolbox.html
+++ b/toolbox.html
@@ -32,8 +32,10 @@
         See font-awesome icons
         <a href="https://fontawesome.com/icons?s=brands" target="_blank">here</a
         >. ( "fa fa-[company]" )
-        <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
-        <input type="submit" value="Submit" />
+        <ul id="sortable"></ul>
+
+        <!-- <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
+        <input type="submit" value="Submit" /> -->
       </form>
     </div>
     <div class="modal-header">
@@ -60,6 +62,5 @@
         <input id="save-button" type="submit" value="Save" />
       </form>
     </div>
-    <ul id="sortable"></ul>
   </body>
 </html>
