fix minor layout issue

--- a/toolbox.html
+++ b/toolbox.html
@@ -26,12 +26,10 @@
   <body>
     <div id="form-container" style="display: none;">
       <form>
-        Enter the icons in the order you want to show.
         <i class="fa fa-times" id="close-icon" title="Close"></i>
-        <br />
-        See font-awesome icons
+        See available font-awesome icons
         <a href="https://fontawesome.com/icons?s=brands" target="_blank">here</a
-        >. ( "fa fa-[company]" )
+        >
         <ul id="sortable"></ul>
         <!-- <textarea rows="4" cols="50" name="iconForm" form="icons"></textarea>
         <input type="submit" value="Submit" /> -->
